--- a/drvAsynRPiCan.html
+++ b/drvAsynRPiCan.html
@@ -75,21 +75,34 @@
   <p>This driver uses asynOption to set the bitrate for CAN messages in bit/s or to add filters for received
     CAN frames.</p>
     <pre>  asynSetOption( "portName", "key", "value" )</pre>
-    <table><thead>
+    <table border="1"><thead>
         <th>Key</th><th>Description</th>
         </thead>
       <tbody>
-        <tr><td>bitrate</td>Change the bitrate of the CAN interface in bit/s<br/>
+        <tr><td>bitrate</td><td>Change the bitrate of the CAN interface in bit/s<br/>
           Allowed values are: 5000, 10000, 20000, 50000, 100000, 125000, 250000, 500000, and 1000000
           </td></tr>
-        <tr><td>addfilter</td>Add a filter for received CAN messages<br/>
-          The value should be of form "FromID:ToID:EXT:RTR"<br/>
+        <tr><td>addfilter</td><td>Add a filter for received CAN messages<br/>
+          The value should be of form <tt>"FromID:ToID:MSGTYPE"</tt><br/>
+          Only messages with <tt>FromID &le; message id &le; ToID</tt> and MSGTYPE will be accepted.<br />
+          The CAN ids are in hexadecimal.<br/>
           Multiple filters can be applied at the same time.
           </td></tr>
-        <tr><td>delfilter</td>Delete all filters for received CAN messages.<br/>
+        <tr><td>delfilter</td><td>Delete all filters for received CAN messages.<br/>
           The value string is not needed by this option.
           </td></tr>
-      </tbody>
+      </tbody></table>
+      <p>MSGTYPE is a 2 bit number. Bit 0 represents the IDE flag of the CAN frame, bit 1
+        the RTR flag.<br/>The truth-table for this filtering is given below (1=Accepted):</p>
+      <table border="1">
+        <tr align="center" valign="middle"><td></td><td colspan="2">RTR_Filter = 1</td></td><td colspan="2">RTR_Filter = 0</td><td></td></tr>
+        <tr align="center" valign="middle"><td rowspan="2">IDE_Filter = 1</td><td>0 </td><td> 1 </td><td> 1 </td><td> 1 </td><td> IDE_bit = 0</td></tr>
+        <tr align="center" valign="middle"><td> 0 </td><td>  1 </td><td> 1 </td><td> 1 </td><td rowspan="2">IDE_bit = 1</td></tr>
+      <tr align="center" valign="middle"><td rowspan="2">IDE_Filter = 0</td><td> 0 </td><td>  0 </td><td> 0  </td><td> 0 </td></tr>
+      <tr align="center" valign="middle"><td>0  </td><td> 1  </td><td> 1 </td><td>  1</td><td> IDE_bit = 0</td></tr>
+      <tr align="center" valign="middle"><td></td><td>RTR_bit = 0</td></td><td colspan="2">RTR_bit = 1</td><td>RTR_bit = 0</td><td></td></tr>
+      </table>
+
 
   <hr />
   <div style="text-align: center">
