introducing PANDA PV naming convention to ISEG HV

--- a/drvAsynRPiCan.html
+++ b/drvAsynRPiCan.html
@@ -74,7 +74,7 @@
   </ul>
   <p>This driver uses asynOption to set the bitrate for CAN messages in bit/s or to add filters for received
     CAN frames.</p>
-    <pre>  asynSetOption( "portName", "key", "value" )</pre>
+    <pre>  asynSetOption( "portName", addr, "key", "value" )</pre>
     <table border="1"><thead>
         <th>Key</th><th>Description</th>
         </thead>
