Redesigned drvAsynCan package. No need to modify asyn makefile anymore

--- a/drvAsynCan.html
+++ b/drvAsynCan.html
@@ -33,7 +33,7 @@
   </div>
   <p>Generic device support is provided for standard EPICS records by the AsynDriver module.
      For the AsynPortDrivers defined in this package the following interfaces are used:<br/>
-  <i>Extract from the AsynDriver Documentation:</i></p>
+  <i>Extract from the <a href="http://www.aps.anl.gov/epics/modules/soft/asyn/R4-21/asynDriver.html#genericEpicsSupport">AsynDriver Documentation:</a></i></p>
   <ul>
     <li>devAsynInt32 - support for drivers that implement interface asynInt32</li>
     <li>devAsynUInt32Digital - support for drivers that implement interface asynUInt32Digital</li>
